adding confetti effect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <button id="dica" data-modal-target="#modal">&#128161;</button>
-        <h1>🐒 Zoordle 🐒</h1>
+        <h1 id="title">🐒 Zoordle 🐒</h1>
         <button id="ajuda">&#10067;</button>
     </header>
     <hr>
@@ -108,6 +108,7 @@
         </div>
     </div>
     </div>
+    <script src="./scripts/confetti.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 
