--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <button onclick="mostraLetraNoBoard(this)" class="caixa-teclado outros">B</button>
             <button onclick="mostraLetraNoBoard(this)" class="caixa-teclado outros">N</button>
             <button onclick="mostraLetraNoBoard(this)" class="caixa-teclado outros">M</button>
-            <button onclick="removeLetra()" class="caixa-teclado outros btn-especial"><i class="gg-backspace"></i>
+            <button onclick="removeLetra()" class="caixa-teclado outros btn-especial"><BKSP</button>
         </div>
     </div>
     </div>
